# ovextras

./: .gitattributes  .gitignore  .project  AUTHORS  CMakeLists.txt  CMakeLists.txt~  CMakeLists_COADAPT.txt  CMakeLists_COADAPT.txt~  CMakeLists_full.txt  INSTALL  README
applications/demos/p300/: CMakeLists.txt
applications/demos/vr-demo/: CMakeLists.txt
applications/demos/vr-demo/src/: ovaCAbstractVrpnPeripheral.cpp  ovavrdCOgreVRApplication.cpp  ovavrdCOgreVRApplication.h  ovavrd_main.cpp
applications/developer-tools/plugin-inspector/: CMakeLists.txt
applications/developer-tools/plugin-inspector/share/: plugin-inspector.conf
applications/developer-tools/plugin-inspector/src/: ovpiCPluginObjectDescEnum.cpp  ovpiCPluginObjectDescEnum.h  ovpiCPluginObjectDescEnumAlgorithmGlobalDefinesGenerator.cpp  ovpiCPluginObjectDescEnumAlgorithmGlobalDefinesGenerator.h  ovpiCPluginObjectDescEnumAlgorithmSnapshotGenerator.cpp  ovpiCPluginObjectDescEnumAlgorithmSnapshotGenerator.h  ovpiCPluginObjectDescEnumBoxAlgorithmDumper.cpp  ovpiCPluginObjectDescEnumBoxAlgorithmDumper.h  ovpiCPluginObjectDescEnumBoxAlgorithmSnapshotGenerator.cpp  ovpiCPluginObjectDescEnumBoxAlgorithmSnapshotGenerator.h  ovpi_main.cpp
applications/developer-tools/skeleton-generator/: CMakeLists.txt
applications/developer-tools/skeleton-generator/share/: box.cpp-codec-toolkit-skeleton  box.cpp-skeleton  box.h-skeleton  configuration.cpp-skeleton  configuration.h-skeleton  driver.cpp-skeleton  driver.h-skeleton  generator-interface.ui  readme-driver.txt-skeleton  skeleton-generator.conf
applications/developer-tools/skeleton-generator/src/: ovsgCBoxAlgorithmSkeletonGenerator.cpp  ovsgCBoxAlgorithmSkeletonGenerator.h  ovsgCDriverSkeletonGenerator.cpp  ovsgCDriverSkeletonGenerator.h  ovsgCSkeletonGenerator.cpp  ovsgCSkeletonGenerator.h  ovsg_main.cpp
applications/developer-tools/vrpn-simulator/: CMakeLists.txt
applications/examples/convert/: CMakeLists.txt
applications/examples/convert/share/: csv2edf.xml  csv2gdf.xml  csv2ov.xml  dat2csv.xml  dat2edf.xml  dat2gdf.xml  dat2ov.xml  gdf2csv.xml  gdf2edf.xml  gdf2ov.xml  ov2csv.xml  ov2edf.xml  ov2gdf.xml  vhdr2csv.xml  vhdr2edf.xml  vhdr2gdf.xml  vhdr2ov.xml
applications/examples/convert/src/: openvibe-convert-real.cmd-base  openvibe-convert-real.sh-base
applications/examples/external-stimulation-connection/: CMakeLists.txt
applications/examples/external-stimulation-connection/src/: ovesce_main.cpp
applications/examples/openvibe-to-tcpip/: CMakeLists.txt
applications/examples/openvibe-to-tcpip/box-tutorials/: tcp-writer.xml  tcpwriter.xml
applications/examples/openvibe-to-tcpip/src/: tcpip-client.cpp
applications/examples/openvibe-to-vrpn/: CMakeLists.txt
applications/examples/openvibe-to-vrpn/box-tutorials/: vrpn-example-openvibe-to-vrpn.xml
applications/examples/openvibe-to-vrpn/src/: vrpn-receiver.cpp
applications/platform/acquisition-server/: CMakeLists.txt
applications/platform/acquisition-server/include/: ovasIAcquisitionServerPlugin.h  ovasIDriver.h  ovasIHeader.h
applications/platform/acquisition-server/share/: acquisition-server-defaults.conf  electrode-names.txt  interface-BrainProducts-ActiCHamp.ui  interface-BrainProducts-BrainampSeries.ui  interface-BrainProducts-VAmp.ui  interface-BrainProductsLiveAmp.ui  interface-Enobio3G.ui  interface-Generic-Oscillator.ui  interface-Generic-TimeSignal.ui  interface-LabStreamingLayer.ui  interface-MCSNVXDriver.ui  interface-NeuroServoHid.ui  interface-Simulated-Deviator.ui  interface-TMSi.ui  interface.ui  interface.ui-base
applications/platform/acquisition-server/src/: ovasCAcquisitionServer.cpp  ovasCAcquisitionServer.h  ovasCAcquisitionServerGUI.cpp  ovasCAcquisitionServerGUI.h  ovasCAcquisitionServerThread.h  ovasCConfigurationBuilder.cpp  ovasCConfigurationBuilder.h  ovasCDriftCorrection.cpp  ovasCDriftCorrection.h  ovasCHeader.cpp  ovasCHeader.h  ovasCSettingsHelper.cpp  ovasCSettingsHelper.h  ovasCSettingsHelperOperators.h  ovas_main.cpp
applications/platform/designer/: CMakeLists.txt
applications/platform/designer/share/: interface.ui-base
applications/platform/designer/src/: ovdCApplication.cpp  ovdCApplication.h  ovdCBoxConfigurationDialog.cpp  ovdCBoxConfigurationDialog.h  ovdCBoxProxy.cpp  ovdCBoxProxy.h  ovdCCommentProxy.cpp  ovdCConnectorEditor.cpp  ovd_defines.h  (+12 more)
applications/platform/py2-check/: CMakeLists.txt
applications/platform/tracker/: CMakeLists.txt
build-tool/stimulation-generator/: CMakeLists.txt
build-tool/stimulation-generator/src/: cpp_code_generator.cpp  cpp_define_generator.cpp  defines.h  file_generator_base.h  ovbt_sg_cpp_code_generator.cpp  ovbt_sg_cpp_define_generator.cpp  ovbt_sg_defines.h  ovbt_sg_file_generator_base.h  ovbt_sg_main.cpp  ovbt_sg_matlab_generator.cpp  stim_generator.cpp
coadapt-classification/: CMakeLists.txt  CMakeLists.txt~
coadapt-classification/src/: ovp_defines.h  ovp_main.cpp  ovp_main.cpp~
coadapt-classification/src/box-algorithms/: README.txt
documentation/: CMakeLists.txt
documentation/src/: CMakeLists.txt  CreateDoxygen.cmake-skeleton  doxyfile-skeleton  header.html  openvibe.dox  openvibe.dox-base
kernel/: CMakeLists.txt
kernel/share/: openvibe-delayed.conf  openvibe.conf  openvibe.conf-base  openvibe_test.conf-base
kernel/src/: ovk_defines.h
kernel/src/kernel/: ovkCKernelContext.cpp  ovkCTypeManager.cpp  ovkCTypeManager.h
kernel/src/tools/: ovkCKernelObjectFactoryHelper.h
modules/ebml/test/: CMakeLists.txt  test_ebml_write.cpp
modules/system/test/: CMakeLists.txt  DartTestfile.txt  ntpclient.cpp  ntpclient.h  test_time.cpp
plugins/processing/fortran/: CMakeLists.txt
plugins/processing/matlab/: CMakeLists.txt
plugins/processing/network-io/: CMakeLists.txt
plugins/processing/signal-processing/: CMakeLists.txt
plugins/processing/simple-visualisation/: CMakeLists.txt
plugins/processing/stimulation/: CMakeLists.txt
plugins/processing/tools/: CMakeLists.txt
plugins/processing/vrpn/: CMakeLists.txt
toolkit/test/: CMakeLists.txt  DartTestfile.txt  test_matrix_read_write_txt.cpp
(+2320 files in other folders)
