
# FILE(GLOB FILENAMES "bci-examples/*") 
# FOREACH(FULLPATH ${FILENAMES})
# 	IF(IS_DIRECTORY ${FULLPATH} AND NOT ${FULLPATH} MATCHES ".*\\.svn")
#		GET_FILENAME_COMPONENT(DIRNAME ${FULLPATH} NAME)
#		IF(${DIRNAME} != "signals")
#			# MESSAGE(STATUS "HEP ${DIRNAME}")
#			INSTALL(DIRECTORY ${DIRNAME} DESTINATION ${DIST_DATADIR}/openvibe/scenarios/bci-examples/)
#		ENDIF(${DIRNAME} != sig
#	ENDIF(IS_DIRECTORY ${FULLPATH} AND NOT ${FULLPATH} MATCHES ".*\\.svn")
#ENDFOREACH(FULLPATH ${FILENAMES})

# INSTALL(DIRECTORY p300-speller/       DESTINATION ${DIST_DATADIR}/openvibe/bci-examples)
# INSTALL(DIRECTORY p300-speller-xDAWN/ DESTINATION ${DIST_DATADIR}/openvibe/bci-examples)

INSTALL(DIRECTORY signals      DESTINATION ${DIST_DATADIR}/openvibe/scenarios/)
INSTALL(DIRECTORY bci-examples DESTINATION ${DIST_DATADIR}/openvibe/scenarios/)

# FILE(GLOB FILENAMES "*") 
# FOREACH(FULLPATH ${FILENAMES})
#	IF(IS_DIRECTORY ${FULLPATH} AND NOT ${FULLPATH} MATCHES ".*\\.svn")
#		GET_FILENAME_COMPONENT(DIRNAME ${FULLPATH} NAME)
#		INSTALL(DIRECTORY ${DIRNAME} DESTINATION ${DIST_DATADIR}/openvibe/scenarios)
#	ENDIF(IS_DIRECTORY ${FULLPATH} AND NOT ${FULLPATH} MATCHES ".*\\.svn")
#ENDFOREACH(FULLPATH ${FILENAMES})

